--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "europe_trip",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/neha2099/europe.git",
+  "homepage": "https://neha2099.github.io/europe",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
+    "@mui/system": "^7.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.5",
-    "@mui/material": "^7.3.5",
-    "@mui/icons-material": "^7.3.5",
-    "@mui/system": "^7.3.5",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
